	WHEOOH works correctly and won't check if a rival will DoW on your teammates or theirs
	Worst Enemy no longer shown for humans' teammates
- Multiplayer OOS Errors
	Changed random "polling error" on F8:MEMBERS tab to use asynchronous RNG
	Changed random unit name generator to use asynchronous RNG
- Scoreboard
	You can always see how many cities your teammates have

MODDING

New Features:

Improvements:

Bug Fixes:


____________________________________________________________________________________________________
BUG 4.2 released November 15th, 2009

CHANGES

New Features:

- SevoPedia
	Technology page shows Civilizations that start with it

Improvements:

- Great Person Progress Bar
	Added hover text displaying full details
- Info Screen [F9]
	Made colors optional on WONDERS list
	Added hover help text to WONDERS tab buttons
- Option Shortcut Reminder
	Message turns itself off the first time you open the Options screen
	If you turn it back on in the System tab, it will remain on as before

Bug Fixes:

- City Screen
	Fixed display of food bar text when city is already over threshold
- Customizable Domestic Advisor
	Fixed options on Advisors tab
	Fixed Zoom to City Button Details option title
- AutoLog
	Pillaging entries work and show correct gold amount
	Peace offer entries work
- AutoSave
	Fixed invalid save file names when starting from a scenario
- Civ4lerts
	Growth, happiness, and health alerts correctly detect when a city will grow next turn
- General
	Added missing 3.19 change with liberating cities during war-time
- Mac
	Fixed reverse list sorting in GPUtil
	Fixed random crash when using Strategy Layer


MODDING

New Features:

- Events
	playerRevolution(ePlayer, iAnarchyTurns, leOldCivics, leNewCivics) [BULL]
- CityUtil
	Use willGrowThisTurn() and willShrinkThisTurn() instead of CyCity.getFoodTurnsLeft()

Improvements:

- Options
	Shortcut Reminder message uses CvModName.modName instead of "BUG Mod"

Bug Fixes:

- GameUtils